# pathtracer-rust

./: .gitignore  Cargo.toml
src/: entity.rs  lib.rs  main.rs  plotter.rs  ptrandom.rs  scene.rs  tracer.rs
src/geometry/: circle.rs  intersection.rs  mesh.rs  mod.rs  plane.rs  quaternion.rs  ray.rs  sphere.rs  surface.rs  util.rs  vec3.rs  volume.rs
src/material/: black_body_radiator.rs  diffuse.rs  glass.rs  glossy.rs  material.rs  mod.rs  spectrum_radiator.rs
