[package]
name = "rtrace"
version = "0.1.0"
authors = ["Jonas <jonas+git_public@joba.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
png = "0.17.2"
rayon = "1.5.1"
ply-rs = "0.1.3"
bvh = "0.6.0"
glam = "0.20.2"